Fix contrast issues in table component header

--- a/studio/styles/ui.scss
+++ b/studio/styles/ui.scss
@@ -118,7 +118,7 @@
 }
 
 .table-container thead th {
-  @apply text-scale-900 font-normal text-sm;
+  @apply text-scale-1100 font-normal text-sm;
   @apply bg-table-header-light dark:bg-table-header-dark;
   @apply border-t border-b border-table-border-light dark:border-table-border-dark;
 }
